--- a/frontend/src/app/routes/test/personality/personality.component.scss
+++ b/frontend/src/app/routes/test/personality/personality.component.scss
@@ -1,14 +1,35 @@
 body {
   align-items: center;
   background-image: url('/assets/images/backgrounds/map-background.png');
-  background-size: cover;
+  background-size: auto;
   background-position: center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
+  background-repeat: repeat;
   display: flex;
   font-family: 'Modulus Pro', sans-serif;
   height: 100vh;
   width: 100vw;
+}
+
+body::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 15%;
+  background: linear-gradient(to bottom, black, transparent);
+  z-index: 1;
+}
+
+body::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 15%;
+  background: linear-gradient(to top, black, transparent);
+  z-index: 1;
 }
 
 #personality-buttons {
@@ -16,6 +37,10 @@ body {
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(2, 1fr);
   gap: 10px;
+  position: relative;
+  top: -400px;
+  width: 435px;
+  margin: 0 auto;
 }
 
 .personality-button {
@@ -28,38 +53,40 @@ body {
   width: 93px;
 }
 
-.personality-button:disabled {
-  cursor: default;
-}
-
 #personality-6-button {
-  left: 302px;
+  position: absolute;
+  left: 230px;
   top: 100px;
 }
 
 #personality-5-button {
-  left: 170px;
+  position: absolute;
+  left: 145px;
   top: 200px;
 }
 
 #personality-4-button {
-  left: 157px;
-  top: 310px;
+  position: absolute;
+  left: 230px;
+  top: 320px;
 }
 
 #personality-3-button {
-  left: 250px;
-  top: 375px;
-}
-
-#personality-2-button {
-  left: 50px;
+  position: absolute;
+  left: 180px;
   top: 450px;
 }
 
+#personality-2-button {
+  position: absolute;
+  left: 40px;
+  top: 540px;
+}
+
 #personality-1-button {
+  position: absolute;
   left: -5px;
-  top: 580px;
+  top: 670px;
 }
 
 .material-icons.color_white {
@@ -70,6 +97,7 @@ body {
   position: fixed;
   top: 10px;
   left: 10px;
+  z-index: 2;
 }
 
 .info {
@@ -78,6 +106,7 @@ body {
   right: 0;
   margin-right: 10px;
   margin-bottom: 10px;
+  z-index: 2;
 }
 
 .bold {
@@ -86,12 +115,13 @@ body {
 
 #card {
   background-color: rgba(255, 255, 255, 0.6);
+  z-index: 2;
 }
 
 #title {
   color: #ffffff;
   font-family: 'Modulus Pro', sans-serif;
-  font-size: 50px;
+  font-size: 40px;
   font-weight: 600;
   letter-spacing: 5px;
   text-shadow: 1px 3px 5px rgba(48, 29, 29, 0.25);
@@ -102,11 +132,19 @@ body {
   left: 50%;
   transform: translateX(-50%);
   width: 100%;
+  z-index: 2;
+  margin-top: 16px;
 }
 
 @media only screen and (max-width: 600px) {
   #title {
     font-size: 65px;
     letter-spacing: 5px;
+  }
+}
+
+@media (min-width: 395px) {
+  #personality-buttons {
+    left: 20px;
   }
 }
