--- a/frontend/src/app/routes/test/result/result.component.scss
+++ b/frontend/src/app/routes/test/result/result.component.scss
@@ -62,3 +62,75 @@ img {
     flex-direction: column;
     align-items: center;
 }
+
+body::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 15%;
+    background: linear-gradient(to bottom, black, transparent);
+    z-index: 1;
+  }
+  
+  body::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 15%;
+    background: linear-gradient(to top, black, transparent);
+    z-index: 1;
+  }
+  
+  .back {
+    position: fixed;
+    top: 10px;
+    left: 10px;
+    z-index: 2;
+  }
+  
+  .info{
+    position: fixed; 
+    bottom: 0; 
+    right: 0;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    z-index: 2;
+  }
+  
+  .bold {
+    font-weight: bold;
+  }
+  
+  #card {
+    background-color: rgba(255, 255, 255, 0.6);
+    z-index: 2;
+  }
+  
+  #title {
+    color: #ffffff;
+    font-family: 'Modulus Pro', sans-serif;
+    font-size: 40px;
+    font-weight: 600;
+    letter-spacing: 5px;
+    text-shadow: 1px 3px 5px rgba(48, 29, 29, 0.25);
+    text-align: center;
+    position: absolute;
+    margin-top: 10px;
+    top: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
+    z-index: 2;
+    margin-top: 16px;
+  }
+  
+  @media only screen and (max-width: 600px) {
+    #title {
+        font-size: 65px;
+        letter-spacing: 5px;
+    }
+  }
